--- a/aboutus.html
+++ b/aboutus.html
@@ -15,11 +15,11 @@
             <input name="fio" placeholder="ФИО" style="padding-top: 20px;" required>
             <input name="phone" placeholder="Телефон" type="tel" required>
             <input name="email" placeholder="Почта" type="email" required>
-            <button type="submit">Получить консультацию</button>
+            <button onclick="send()">Получить консультацию</button>
         </form>
     </div>
     <div class="modal-good">
-        <div class="card1" style="background: rgb(144, 144, 144, 0.9); width: 650px; height: 383px; display: flex; align-items: center; justify-content: center;">
+        <div class="card1" style="background: rgb(144, 144, 144, 0.9); align-items: center;">
             <h1>Заявка отправлена !</h1>
         </div>
     </div>
@@ -43,18 +43,18 @@
 
     <main class="exception">
         <h1 class="title">Наследие. Технологии. Будущее.</h1>
-        <div class="wrapper1" style="margin-bottom: 80px;">
-            <div class="photo1" style="width: 666px; height: 457px; margin-right: 55px;"></div>
-            <div class="photo2" style="width: 666px; height: 457px; margin-left: 55px;"></div>
+        <div class="wrapper11" style="margin-bottom: 40px;">
+            <div class="photo photo1"></div>
+            <div class="photo photo2"></div>
         </div>
-        <h2 style="margin-bottom: 60px; width: 1621px; color: #1F2652;">
+        <h2 style="margin-bottom: 60px; max-width: 1621px; color: #1F2652; margin: 60px 100px">
             Наш колледж был основан в 2008 году группой учёных-практиков и энтузиастов IT-индустрии. Мы заметили, как быстро растёт разрыв между фундаментальным образованием и реальными 
             потребностями технологического рынка.
             Идея была простой: создать учебное заведение, в котором теория неразрывно связана с практикой. Уже в 2010 году, при поддержке инновационного центра «Сколково», мы набрали первых 50 студентов.
         </h2>
         <div class="title-two">
-            <h2 class="title" style="color: #1F2652; margin: 20px 0;">Наша миссия</h2>
-            <h3 style="width: 1305px; height: 180px; color: #1F2652;">
+            <h2 class="title" style="color: #1F2652; margin: 20px 100px;">Наша миссия</h2>
+            <h3 style="max-width: 1305px; max-height: 180px; color: #1F2652; margin: 0 100px">
                 В наших стенах студенты не просто осваивают языки программирования
                 и инструменты разработки. Они постигают логику,
                 алгоритмическое мышление и 
@@ -62,6 +62,7 @@
                 что лежат в основе всех великих технологических открытий.
             </h3>
         </div>
+        <a class="hover" style="color: #1F2652; margin: 60px 0; font-size: 40px;" href="./sitemap.html"><h2>sitemap</h2><a>
     </main>
 
     <footer>
