--- a/contacts.html
+++ b/contacts.html
@@ -15,11 +15,11 @@
             <input name="fio" placeholder="ФИО" style="padding-top: 20px;" required>
             <input name="phone" placeholder="Телефон" type="tel" required>
             <input name="email" placeholder="Почта" type="email" required>
-            <button type="submit">Получить консультацию</button>
+            <button onclick="send()">Получить консультацию</button>
         </form>
     </div>
     <div class="modal-good">
-        <div class="card1" style="background: rgb(144, 144, 144, 0.9); width: 650px; height: 383px; display: flex; align-items: center; justify-content: center;">
+        <div class="card1" style="background: rgb(144, 144, 144, 0.9); align-items: center;">
             <h1>Заявка отправлена !</h1>
         </div>
     </div>
