--- a/news.html
+++ b/news.html
@@ -15,11 +15,11 @@
             <input name="fio" placeholder="ФИО" style="padding-top: 20px;" required>
             <input name="phone" placeholder="Телефон" type="tel" required>
             <input name="email" placeholder="Почта" type="email" required>
-            <button type="submit">Получить консультацию</button>
+            <button onclick="send()">Получить консультацию</button>
         </form>
     </div>
     <div class="modal-good">
-        <div class="card1" style="background: rgb(144, 144, 144, 0.9); width: 650px; height: 383px; display: flex; align-items: center; justify-content: center;">
+        <div class="card1" style="background: rgb(144, 144, 144, 0.9); align-items: center;">
             <h1>Заявка отправлена !</h1>
         </div>
     </div>
@@ -44,7 +44,7 @@
     <main class="exception2">
         <div class="grid1">
             <a class="news-card" style="width: 280px;">
-                <img src="./img/news.png" class="news-img" alt="">
+                <img src="./img/news.jpg" class="news-img" alt="">
                 <div class="news-text">
                     <h3>Обновление компьютеров</h3>
                     <p>Сегодня в нашем учебном заведении завершилось масштабное обновление компьютерного класса. Установлено 30 новых компьютеров с процессорами Intel Core i7, 16 ГБ ОЗУ и SSD накопителями. Обновлено программное обеспечение, установлены новые мониторы 4K и современная система охлаждения.</p>
@@ -65,7 +65,7 @@
                 </div>
             </a>
             <a class="news-card" style="width: 280px;">
-                <img src="./img/news.png" class="news-img" alt="">
+                <img src="./img/news.jpg" class="news-img" alt="">
                 <div class="news-text">
                     <h3>Обновление компьютеров</h3>
                     <p>Сегодня в нашем учебном заведении завершилось масштабное обновление компьютерного класса. Установлено 30 новых компьютеров с процессорами Intel Core i7, 16 ГБ ОЗУ и SSD накопителями. Обновлено программное обеспечение, установлены новые мониторы 4K и современная система охлаждения.</p>
