--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     <script defer src="./assets/news.js"></script>
     <script defer src="./assets/enroll.js"></script>
+    <link rel="stylesheet" href="/path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <div class="modal-bg" onclick="closing()"></div>
@@ -16,11 +17,11 @@
             <input name="fio" placeholder="ФИО" style="padding-top: 20px;" required>
             <input name="phone" placeholder="Телефон" type="tel" required>
             <input name="email" placeholder="Почта" type="email" required>
-            <button type="submit">Получить консультацию</button>
+            <button onclick="send()">Получить консультацию</button>
         </form>
     </div>
     <div class="modal-good">
-        <div class="card1" style="background: rgb(144, 144, 144, 0.9); width: 650px; height: 383px; display: flex; align-items: center; justify-content: center;">
+        <div class="card1" style="background: rgb(144, 144, 144, 0.9); align-items: center;">
             <h1>Заявка отправлена !</h1>
         </div>
     </div>
@@ -86,7 +87,7 @@
                 <button class="carousel-btn prev" onclick="scrollNews(-1)">‹</button>
                 <div class="news-track" id="newsTrack">
                     <a href="./news.html" class="news-card" style="min-width: 280px;">
-                        <img src="./img/news.png" class="news-img" alt="">
+                        <img src="./img/news.jpg" class="news-img" alt="">
                         <div class="news-text">
                             <h3>Обновление компьютеров</h3>
                             <p>Сегодня обновили компьютерный класс</p>
@@ -110,7 +111,7 @@
                         </div>
                     </a>
                     <a href="./news.html" class="news-card" style="min-width: 280px;">
-                        <img src="./img/news.png" class="news-img" alt="">
+                        <img src="./img/news.jpg" class="news-img" alt="">
                         <div class="news-text">
                             <h3>Обновление компьютеров</h3>
                             <p>Сегодня обновили компьютерный класс</p>
