--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button onclick="send()">Получить консультацию</button>
         </form>
     </div>
-    <div class="modal-good">
+    <div class="modal-good modal">
         <div class="card1" style="background: rgb(144, 144, 144, 0.9); align-items: center;">
             <h1>Заявка отправлена !</h1>
         </div>
@@ -78,6 +78,19 @@
             <div class="info">
                 <img src="./img/icons8-bank-building-100.png" alt="">
                 <h1>Bank</h1>
+            </div>
+        </div>
+        <div class="separator"></div>
+        <h1 class="title">Наши специальности</h1>
+        <div class="wrapper" style="margin-bottom: 80px;">
+            <div class="info">
+                <h1>Программирование</h1>
+            </div>
+            <div class="info">
+                <h1>Графический дизайн</h1>
+            </div>
+            <div class="info">
+                <h1>Информационная безопасность</h1>
             </div>
         </div>
         <div class="separator"></div>
