--- a/news.html
+++ b/news.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Оброзование.ру</title>
+    <title>Образование.ру</title>
     <link rel="icon" href="./img/icons8-castle-64.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/style.css">
     <script defer src="./assets/enroll.js"></script>
 </head>
 <body>
     <div class="modal-bg" onclick="closing()"></div>
+    <div class="modal-bg-catalog" onclick="closing_catalog()"></div>
     <div class="modal">
         <form id="contact" class="card1" style="background: rgb(144, 144, 144, 0.9);">
             <input name="fio" placeholder="ФИО" style="padding-top: 20px;" required>
@@ -19,7 +20,7 @@
         </form>
     </div>
     <div class="modal-good">
-        <div class="card1" style="background: rgb(144, 144, 144, 0.9); align-items: center;">
+        <div>
             <h1>Заявка отправлена !</h1>
         </div>
     </div>
@@ -27,9 +28,16 @@
         <div class="wrapper">
             <div style="display: flex; flex-direction: row; align-items: center;">
                 <img src="./img/icons8-education-50.png" class="logo" alt="">
-                <p class="logo-p">Оброзование.ру</p>
+                <p class="logo-p">Образование.ру</p>
             </div>
-            <a class="f" href="./aboutus.html">О нас</a>
+            <div class="wrapper-aboutus">
+                <a class="f" onclick="open_catalog()" style="display: flex; align-items: center;">О нас<img src="./img/icons8-sort-down-30.png" alt="" style="width: 15px; margin-left: 5px;"></a>
+                <div class="dropdown-content">
+                    <a href="./aboutus.html" onclick="closing_catalog()">История</a>
+                    <a href="#" onclick="closing_catalog()">Специальности</a>
+                    <a href="#" onclick="closing_catalog()">Партнёры</a>
+                </div>
+            </div>
             <a class="f" href="./contacts.html">Контакты</a>
             <a href="./index.html"><img src="./img/icons8-castle-64.png" class="home"></a>
             <a class="f active">Новости</a>
@@ -42,54 +50,66 @@
     </header>
 
     <main class="exception2">
-        <div class="grid1">
-            <a class="news-card" style="width: 280px;">
-                <img src="./img/news.jpg" class="news-img" alt="">
-                <div class="news-text">
-                    <h3>Обновление компьютеров</h3>
-                    <p>Сегодня в нашем учебном заведении завершилось масштабное обновление компьютерного класса. Установлено 30 новых компьютеров с процессорами Intel Core i7, 16 ГБ ОЗУ и SSD накопителями. Обновлено программное обеспечение, установлены новые мониторы 4K и современная система охлаждения.</p>
+        <div class="grid-news">
+            <div class="news-card1">
+                <img src="./img/news.jpg" alt="">
+                <div class="news-wrapper">
+                    <h2>Обновление компьютеров</h2>
+                    <h3>
+                        Благодаря поддержке Министерства образования Удмуртской Республики (или местного спонсора), класс был оснащен 20 новейшими моноблоками, высокоскоростным доступом в интернет, интерактивной панелью и современным программным обеспечением. Новое оборудование позволит вывести преподавание информатики и других предметов на качественно новый уровень, соответствующий запросам цифрового общества.
+                    </h3>
                 </div>
-            </a>
-            <a class="news-card" style="width: 280px;">
-                <img src="./img/news1.jpg" class="news-img" alt="">
-                <div class="news-text">
-                    <h3>Поступление новых учеников</h3>
-                    <p>В этом году наше образовательное учреждение пополнилось 200 новыми студентами! Поступающие прошли строгий отбор по результатам ЕГЭ и вступительных экзаменов. Среди новичков - 120 студентов технических специальностей, 50 - гуманитарных и 30 - экономических направлений. Ориентационная неделя начнется 1 сентября.</p>
+            </div>
+            <div class="news-card1">
+                <img src="./img/news1.jpg" alt="">
+                <div class="news-wrapper">
+                    <h2>Поступление новых учеников</h2>
+                    <h3>
+                        Сегодня наша школа распахнула свои двери для N-го количества новых учеников, которые впервые переступили порог в качестве полноправных членов нашего дружного коллектива. Мы рады приветствовать первоклассников, а также ребят, пополнивших ряды средних и старших классов.
+                    </h3>
                 </div>
-            </a>
-            <a class="news-card" style="width: 280px;">
-                <img src="./img/news2.jpg" class="news-img" alt="">
-                <div class="news-text">
-                    <h3>Победа в олимпиаде</h3>
-                    <p>Наши студенты одержали блестящую победу на региональной олимпиаде по математике и информатике! Команда из 5 человек заняла 1-е место, опередив 50 команд из различных учебных заведений. Особо отличился студент 3-го курса Александр Петров, который получил максимальные баллы в личном зачете.</p>
+            </div>
+            <div class="news-card1">
+                <img src="./img/news2.jpg" alt="">
+                <div class="news-wrapper">
+                    <h2>Победа в олимпиаде</h2>
+                    <h3>
+                        Победа на всероссийском уровне не только подтверждает высочайший уровень подготовки в нашей школе, но и открывает перед победителем широкие перспективы: он получает право на поступление в любой профильный ВУЗ страны без вступительных испытаний.
+                    </h3>
                 </div>
-            </a>
-            <a class="news-card" style="width: 280px;">
-                <img src="./img/news.jpg" class="news-img" alt="">
-                <div class="news-text">
-                    <h3>Обновление компьютеров</h3>
-                    <p>Сегодня в нашем учебном заведении завершилось масштабное обновление компьютерного класса. Установлено 30 новых компьютеров с процессорами Intel Core i7, 16 ГБ ОЗУ и SSD накопителями. Обновлено программное обеспечение, установлены новые мониторы 4K и современная система охлаждения.</p>
+            </div>
+            <div class="news-card1">
+                <img src="./img/news3.jpg" alt="">
+                <div class="news-wrapper">
+                    <h2>Зелёный десант в деле</h2>
+                    <h3>
+                        Ребята из старших классов помогали высаживать молодые саженцы деревьев и кустарников вдоль центральной аллеи, а младшие школьники увлеченно собирали опавшую листву и убирали мусор. Работа кипела, и всего за несколько часов школьный двор преобразился.
+                    </h3>
                 </div>
-            </a>
-            <a class="news-card" style="width: 280px;">
-                <img src="./img/news1.jpg" class="news-img" alt="">
-                <div class="news-text">
-                    <h3>Поступление новых учеников</h3>
-                    <p>В этом году наше образовательное учреждение пополнилось 200 новыми студентами! Поступающие прошли строгий отбор по результатам ЕГЭ и вступительных экзаменов. Среди новичков - 120 студентов технических специальностей, 50 - гуманитарных и 30 - экономических направлений. Ориентационная неделя начнется 1 сентября.</p>
+            </div>
+            <div class="news-card1">
+                <img src="./img/news4.jpg" alt="">
+                <div class="news-wrapper">
+                    <h2>Триумф наших Айтишников</h2>
+                    <h3>
+                        Жюри высоко оценило оригинальность идеи, качество кода и презентацию рабочего прототипа. Победа в таком масштабном соревновании — это не только признание таланта наших студентов, но и подтверждение высокого уровня подготовки IT-специалистов в нашем университете.
+                    </h3>
                 </div>
-            </a>
-            <a class="news-card" style="width: 280px;">
-                <img src="./img/news2.jpg" class="news-img" alt="">
-                <div class="news-text">
-                    <h3>Победа в олимпиаде</h3>
-                    <p>Наши студенты одержали блестящую победу на региональной олимпиаде по математике и информатике! Команда из 5 человек заняла 1-е место, опередив 50 команд из различных учебных заведений. Особо отличился студент 3-го курса Александр Петров, который получил максимальные баллы в личном зачете.</p>
+            </div>
+            <div class="news-card1">
+                <img src="./img/news5.jpg" alt="">
+                <div class="news-wrapper">
+                    <h2>Навстречу реальным проектам</h2>
+                    <h3>
+                        Основная цель проекта — сократить разрыв между академическим образованием и требованиями современного рынка труда. Студенты получат уникальную возможность работать над реальными коммерческими проектами под руководством опытных менторов из компании, используя самое актуальное оборудование и программное обеспечение.
+                    </h3>
                 </div>
-            </a>
+            </div>
         </div>
     </main>
 
     <footer>
-        <p>Оброзование.ру @2008-2025</p>
+        <p>Образование.ру @2008-2025</p>
         <div class="wrapper">
             <p class="change">Icons by</p>
             <a target="_blank" href="https://icons8.com/">Icons8</a>
