--- a/aboutus.html
+++ b/aboutus.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Оброзование.ру</title>
+    <title>Образование.ру</title>
     <link rel="icon" href="./img/icons8-castle-64.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/style.css">
     <script defer src="./assets/enroll.js"></script>
 </head>
 <body>
     <div class="modal-bg" onclick="closing()"></div>
+    <div class="modal-bg-catalog" onclick="closing_catalog()"></div>
     <div class="modal">
         <form id="contact" class="card1" style="background: rgb(144, 144, 144, 0.9);">
             <input name="fio" placeholder="ФИО" style="padding-top: 20px;" required>
@@ -19,7 +20,7 @@
         </form>
     </div>
     <div class="modal-good">
-        <div class="card1" style="background: rgb(144, 144, 144, 0.9); align-items: center;">
+        <div>
             <h1>Заявка отправлена !</h1>
         </div>
     </div>
@@ -27,9 +28,16 @@
         <div class="wrapper">
             <div style="display: flex; flex-direction: row; align-items: center;">
                 <img src="./img/icons8-education-50.png" class="logo" alt="">
-                <p class="logo-p">Оброзование.ру</p>
+                <p class="logo-p">Образование.ру</p>
             </div>
-            <a class="f active">О нас</a>
+            <div class="wrapper-aboutus">
+                <a class="f active" onclick="open_catalog()" style="display: flex; align-items: center;">О нас<img src="./img/icons8-sort-down-30.png" alt="" style="width: 15px; margin-left: 5px;"></a>
+                <div class="dropdown-content">
+                    <a class="active" href="./aboutus.html" onclick="closing_catalog()">История</a>
+                    <a href="#" onclick="closing_catalog()">Специальности</a>
+                    <a href="#" onclick="closing_catalog()">Партнёры</a>
+                </div>
+            </div>
             <a class="f" href="./contacts.html">Контакты</a>
             <a href="./index.html"><img src="./img/icons8-castle-64.png" class="home"></a>
             <a class="f" href="./news.html">Новости</a>
@@ -48,25 +56,25 @@
             <div class="photo photo2"></div>
         </div>
         <h2 style="margin-bottom: 60px; max-width: 1621px; color: #1F2652; margin: 60px 100px">
-            Наш колледж был основан в 2008 году группой учёных-практиков и энтузиастов IT-индустрии. Мы заметили, как быстро растёт разрыв между фундаментальным образованием и реальными 
-            потребностями технологического рынка.
-            Идея была простой: создать учебное заведение, в котором теория неразрывно связана с практикой. Уже в 2010 году, при поддержке инновационного центра «Сколково», мы набрали первых 50 студентов.
+            Наш колледж был основан в 2008 году группой учёных-практиков и энтузиастов IT-индустрии. Задолго до всеобщего цифрового бума мы заметили критический разрыв между классическим фундаментальным образованием и стремительно меняющимися, реальными потребностями технологического рынка.
+            <br>
+            <br>
+            Идея была простой, но амбициозной: создать учебное заведение нового типа, в котором академическая теория неразрывно связана с практикой и актуальными вызовами бизнеса.
+            <br>
+            <br>
+            Уже в 2010 году, заручившись поддержкой и ресурсами инновационного центра «Сколково», мы открыли свои двери для первых 50 студентов. С тех пор мы непрерывно растём, адаптируемся и задаём стандарты IT-образования в регионе.
         </h2>
         <div class="title-two">
             <h2 class="title" style="color: #1F2652; margin: 20px 100px;">Наша миссия</h2>
             <h3 style="max-width: 1305px; max-height: 180px; color: #1F2652; margin: 0 100px">
-                В наших стенах студенты не просто осваивают языки программирования
-                и инструменты разработки. Они постигают логику,
-                алгоритмическое мышление и 
-                математическую строгость — те дисциплины,
-                что лежат в основе всех великих технологических открытий.
+                В наших стенах студенты не просто осваивают синтаксис языков программирования или инструментарий разработки. Мы погружаем их в основы основ. Они постигают логику, развивают алгоритмическое мышление и приучаются к математической строгости — тем универсальным дисциплинам, что лежат в основе всех великих технологических открытий, от первого компьютера до искусственного интеллекта.
             </h3>
         </div>
         <a class="hover" style="color: #1F2652; margin: 60px 0; font-size: 40px;" href="./sitemap.html"><h2>sitemap</h2><a>
     </main>
 
     <footer>
-        <p>Оброзование.ру @2008-2025</p>
+        <p>Образование.ру @2008-2025</p>
         <div class="wrapper">
             <p class="change">Icons by</p>
             <a target="_blank" href="https://icons8.com/">Icons8</a>
