--- a/sitemap.html
+++ b/sitemap.html
@@ -34,8 +34,8 @@
                 <a class="f" onclick="open_catalog()" style="display: flex; align-items: center;">О нас<img src="./img/icons8-sort-down-30.png" alt="" style="width: 15px; margin-left: 5px;"></a>
                 <div class="dropdown-content">
                     <a href="./aboutus.html" onclick="closing_catalog()">История</a>
-                    <a href="#" onclick="closing_catalog()">Специальности</a>
-                    <a href="#" onclick="closing_catalog()">Партнёры</a>
+                    <a href="./speciality.html" onclick="closing_catalog()">Специальности</a>
+                    <a href="./partners.html" onclick="closing_catalog()">Партнёры</a>
                 </div>
             </div>
             <a class="f" href="./contacts.html">Контакты</a>
@@ -49,7 +49,7 @@
         </div>
     </header>
 
-    <main class="exception2">
+    <main class="exception1">
         <h1 class="title" style="color: #1F2652;">Все работы над сайтом</h1>
         <div class="title-two" style="margin-bottom: 70px">
             <h2 class="title" style="color: #1F2652; margin: 0 100px; margin-bottom: 30px;">Анализ конкурентов</h2>
