--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <a class="f" onclick="open_catalog()" style="display: flex; align-items: center;">О нас<img src="./img/icons8-sort-down-30.png" alt="" style="width: 15px; margin-left: 5px;"></a>
                 <div class="dropdown-content">
                     <a href="./aboutus.html" onclick="closing_catalog()">История</a>
-                    <a href="#" onclick="closing_catalog()">Специальности</a>
-                    <a href="#" onclick="closing_catalog()">Партнёры</a>
+                    <a href="./speciality.html" onclick="closing_catalog()">Специальности</a>
+                    <a href="./partners.html" onclick="closing_catalog()">Партнёры</a>
                 </div>
             </div>
             <a class="f" href="./contacts.html">Контакты</a>
@@ -93,13 +93,13 @@
         <h1 class="title">Наши специальности</h1>
         <div class="wrapper" style="margin-bottom: 80px; flex-direction: column;">
             <div class="info">
-                <h1 class="marginX">1.Программирование</h1>
+                <a href="./speciality.html"><h1 class="marginX">1.Программирование</h1></a>
             </div>
             <div class="info">
-                <h1 class="marginX">2.Графический дизайн</h1>
+                <a href="./speciality.html"><h1 class="marginX">2.Графический дизайн</h1></a>
             </div>
             <div class="info">
-                <h1 class="marginX">3.Информационная безопасность</h1>
+                <a href="./speciality.html"><h1 class="marginX">3.Информационная безопасность</h1></a>
             </div>
         </div>
         <div class="separator"></div>
@@ -152,7 +152,7 @@
                         <img src="./img/news5.jpg" class="news-img" alt="">
                         <div class="news-text">
                             <h3>Навстречу реальным проектам</h3>
-                            <p>Основная цель проекта — сократить разрыв между академическим образованием</p>
+                    <p>Основная цель проекта — сократить разрыв между академическим образованием</p>
                             <span class="read-more">Подробнее...</span>
                         </div>
                     </a>
