--- a/news.html
+++ b/news.html
@@ -34,8 +34,8 @@
                 <a class="f" onclick="open_catalog()" style="display: flex; align-items: center;">О нас<img src="./img/icons8-sort-down-30.png" alt="" style="width: 15px; margin-left: 5px;"></a>
                 <div class="dropdown-content">
                     <a href="./aboutus.html" onclick="closing_catalog()">История</a>
-                    <a href="#" onclick="closing_catalog()">Специальности</a>
-                    <a href="#" onclick="closing_catalog()">Партнёры</a>
+                    <a href="./speciality.html" onclick="closing_catalog()">Специальности</a>
+                    <a href="./partners.html" onclick="closing_catalog()">Партнёры</a>
                 </div>
             </div>
             <a class="f" href="./contacts.html">Контакты</a>
